codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__realtime_settings__tests__saved_voice_confirmation.snap
---
source: tui/src/chatwidget/realtime_settings_tests.rs
assertion_line: 46
expression: lines
---
• Voice set to juniper. Applies to your next voice conversation.
