codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__realtime_settings__tests__voice_input_channel_subset.snap
---
source: tui/src/chatwidget/realtime_settings_tests.rs
expression: "render_bottom_popup(&chat, 90)"
---
  Microphone: Zen Go Synergy Core Playback
  Select the input channels to mix. Select at least one.

  Type to search

  [x] Input 1
› [x] Input 2
  [ ] Input 3
  [ ] Input 4

  space toggle · enter save · esc cancel
