codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__realtime_settings__tests__voice_input_channels_empty.snap
---
source: tui/src/chatwidget/realtime_settings_tests.rs
expression: "render_bottom_popup(&chat, 90)"
---
  Microphone: Mic
  Select the input channels to mix. Select at least one.

  Type to search

› [ ] Input 1
  [ ] Input 2
  [ ] Input 3
  [ ] Input 4

  Select at least one input channel.
  space toggle · enter save · esc cancel
