codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__realtime_settings__tests__voice_multichannel_input_devices.snap
---
source: tui/src/chatwidget/realtime_settings_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Input device
  Applies to your next voice conversation.


› 1. System default (current)
  2. Audio interface
  3. Other device
  4. Back

  enter select · esc back
