codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__realtime_settings__tests__voice_settings.snap
---
source: tui/src/chatwidget/realtime_settings_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Voice settings


› 1. Set sound devices
  2. Choose a voice

  enter select · esc back
